changing package.json

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-d3-graph": "^2.5.0",
     "react-dom": "^16.13.1",
     "react-graph-vis": "^1.0.5",
-    "react-scripts": "3.4.1",
+    "react-scripts": "3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
